# scriptable-block

./: .gitignore  CMakeLists.txt  about.md  mod.json
src/: main.cpp
src/dsl/: AST.hpp  DSLError.hpp  Environment.hpp  Interpreter.cpp  Interpreter.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Token.hpp
src/hooks/: EditorUIHooks.cpp  LevelEditorLayerHooks.cpp  PlayLayerHooks.cpp
src/objects/: ScriptableObject.cpp  ScriptableObjectData.hpp
src/runtime/: GameAPI.cpp  GameAPI.hpp  ScriptRuntime.cpp  ScriptRuntime.hpp
src/ui/: CodeEditorPopup.cpp  CodeEditorPopup.hpp  SyntaxHighlighter.cpp  SyntaxHighlighter.hpp
